changed media query for select divs to better match a mobile layout. Resolved text alignment of footer for mobile devices.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,10 +57,12 @@ h2 {
 /* LAYOUT
 /*******************************************/
 header {
+
 }
 
 .footer.flex {
   height: 10%;
+	text-align: center;
 }
 
 /******************************************
@@ -375,8 +377,8 @@ header {
 }
 
 .products.bottom img {
-	width: 100%;
-	height: 220px;
+  width: 100%;
+  height: 220px;
 }
 
 #size {
@@ -484,6 +486,7 @@ header {
 
   .select div {
     width: 50%;
+		height: 30%;
   }
 
   .btn-pushable,
